Added text under the sections to show example

--- a/templates/ip_addresses.html
+++ b/templates/ip_addresses.html
@@ -12,6 +12,18 @@
 <body>
     <a class="home-link" href="{{ url_for('index') }}">Home</a>
     <h1>White- and Blacklisted IP Addresses</h1>
+    <section>
+        <h2>Whitelisted IP Addresses</h2>
+        <p>IP Address number 1<br>
+            IP Address number 2<br>
+        </p>
+    </section>
+    <section>
+        <h2>Blacklisted IP Addresses</h2>
+        <p>IP Address number 3<br>
+            IP Address number 4<br>
+        </p>
+    </section>
     <!-- Add content specific to the section -->
 </body>
 </html>
