--- a/templates/network_data.html
+++ b/templates/network_data.html
@@ -12,6 +12,24 @@
 <body>
     <a class="home-link" href="{{ url_for('index') }}">Home</a>
     <h1>Network Data</h1>
+    <section>
+        <h2>Protocols in use</h2>
+        <p>Amount of TCP: 123 <br>
+            Percentage of TCP: 45%<br>
+            Amount of UDP: 67 <br>
+            Percentage of UDP: 89%<br>
+            Amount of xxx: X<br>
+            Percentage of xxx: X<br>
+        </p>
+    </section>
+    <section>
+        <h2>Packets</h2>
+        <p>Amount of Packets: 420<br>
+            Average packet size: 42<br>
+            Smallest packet: 21<br>
+            Largest packet: 69<br>
+        </p>
+    </section>
     <!-- Add content specific to the section -->
 </body>
 </html>
