--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -12,6 +12,15 @@
 <body>
     <a class="home-link" href="{{ url_for('index') }}">Home</a>
     <h1>Notifications</h1>
+    <section>
+        <h2>Suspicious Packets:</h2>
+        <p>Packet number 123 <br>
+            Packet source: 191.101.10<br>
+            Nature of threat: Chinese or Russian origin <br>
+            Timestamp: 13.37 CET <br>
+        </p>
+    </section>
+
     <!-- Add content specific to the Notifications -->
 </body>
 </html>
