Cleaning up the clusterfuck

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,74 +1,5 @@
-<!-- templates/index.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Management Interface - Home</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Center content horizontally */
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        .home-link, .section-link {
-            margin-bottom: 10px;
-            text-decoration: none;
-            color: #007bff;
-        }
-
-        .home-link:hover, .section-link:hover {
-            text-decoration: underline;
-        }
-
-        .image-container {
-            margin-top: 20px; /* Adjust margin as needed */
-        }
-
-        .image-container img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto; /* Center the image horizontally */
-        }
-
-        .link-container {
-            display: flex;
-            flex-direction: row;
-            margin-bottom: 20px; /* Add space between links and image */
-        }
-
-        .link-container .section-link {
-            margin-right: 20px; /* Adjust margin as needed */
-        }
-
-        .link-container .home-link {
-            margin-right: 20px; /* Add space between "Home" and "Network Data" */
-        }
-    </style>
-</head>
-<body>
-    <div class="link-container">
-        <a class="home-link" href="{{ url_for('index') }}">Home</a>
-        <a class="section-link" href="{{ url_for('network_data') }}">Network Data</a>
-        <a class="section-link" href="{{ url_for('ip_addresses') }}">White- and Blacklisted IP Addresses</a>
-        <a class="section-link" href="{{ url_for('notifications') }}">Notifications</a>
-    </div>
-
-    <h1>Welcome to the Management Interface</h1>
-
-    <div class="image-container">
-        <!-- Add an image to the home page -->
-        <img src="{{ url_for('static', filename='the_gang.png') }}" alt="Home Image">
-    </div>
-
-    <!-- Add more HTML content as needed -->
-</body>
-</html>
+{% extends "base.html" %}
+{% block septitle %}{% endblock %}
+{% block content %}
+    <h1 class="text-center">IoT Warden</h1>
+{% endblock %}
