--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,32 @@
 {% block septitle %}{% endblock %}
 {% block content %}
     <h1 class="text-center">IoT Warden</h1>
+    {# Runtime Data #}
+    <h2 class="text-center">Runtime cache</h2>
+    <div class="row">
+        {% for name, list in redis_wbl %}
+            <div class="col">
+                <h2 class="text-center">{{ name }}</h2>
+                <table class="table table-dark table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">IP Addresses</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for entry in list %}
+                        <tr>
+                            <td>{{ entry }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endfor %}
+    </div>
+
+    {# Permanent Data #}
+    <h2 class="text-center">Permanent Storage</h2>
     <div class="row">
         <div class="col">
             <h2 class="text-center">Users</h2>
@@ -23,7 +49,7 @@
                 </tbody>
             </table>
         </div>
-        {% for name, list in whiteblacklists %}
+        {% for name, list in mongo_wbl %}
             <div class="col">
                 <h2 class="text-center">{{ name }}</h2>
                 <table class="table table-dark table-striped">
