--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="text-center">IoT Warden</h1>
     {# Runtime Data #}
-    <h2 class="text-center">Runtime cache</h2>
+    <h2 class="text-center">Runtime Cache</h2>
     <div class="row">
         {% for name, list in redis_wbl %}
             <div class="col">
