--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 {% block septitle %}{% endblock %}
 {% block content %}
     <h1 class="text-center">IoT Warden</h1>
-    {# Runtime Data #}
-    <h2 class="text-center">Runtime Cache</h2>
+    {# Runtime Data (redis) #}
+    <h2 class="text-center">Runtime Cache (Redis)</h2>
     <div class="row">
         {% for name, list in redis_wbl %}
             <div class="col">
@@ -26,8 +26,8 @@
         {% endfor %}
     </div>
 
-    {# Permanent Data #}
-    <h2 class="text-center">Permanent Storage</h2>
+    {# Permanent Data (mongo) #}
+    <h2 class="text-center">Permanent Storage (MongoDB)</h2>
     <div class="row">
         <div class="col">
             <h3 class="text-center">Users</h3>
