Made Mongo and Redis pages working (i think)

--- a/templates/mongo.html
+++ b/templates/mongo.html
@@ -2,6 +2,6 @@
 {% block secondarytitle %}MongoDB{% endblock %}
 {% block supercontent %}
     <div class="ratio ratio-16x9">
-        <iframe src="http://localhost:8081"></iframe>
+        <iframe src="http://{{hostname}}:8081"></iframe>
     </div>
 {% endblock %}
