--- a/templates/redis.html
+++ b/templates/redis.html
@@ -2,6 +2,6 @@
 {% block secondarytitle %}Redis{% endblock %}
 {% block supercontent %}
     <div class="ratio ratio-16x9">
-        <iframe src="http://localhost:8001"></iframe>
+        <iframe src="http://{{hostname}}:8001"></iframe>
     </div>
 {% endblock %}
