--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -5,11 +5,11 @@
     <form action="/users/add" method="post">
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name">
+            <input type="text" class="form-control" id="name" name="name">
         </div>
         <div class="mb-3">
             <label for="gotify_token" class="form-label">Gotify Token</label>
-            <input type="text" class="form-control" id="gotify_token">
+            <input type="text" class="form-control" id="gotify_token" name="gotify_token">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
