--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -2,7 +2,7 @@
 {% block septitle %}{% endblock %}
 {% block content %}
     <h1 class="text-center">Add User</h1>
-    <form action="/users/add" method="post">
+    <form action="{{ url_for('front_add_user') }}" method="post">
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" name="name">
