--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <a class="btn btn-primary" href="{{ url_for('front_add_user') }}" role="button">Add User</a>
         </div>
         {% for name, list in mongo_wbl %}
             <div class="col">
